--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "@ant-design/icons": "^4.8.0",
     "antd": "^4.24.6",
     "next": "^9.5.5",
+    "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.0",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
