--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.8.1",
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
