--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.8.0",
     "antd": "^4.24.6",
+    "axios": "^1.3.2",
     "next": "^9.5.5",
     "next-redux-wrapper": "^6.0.2",
     "prop-types": "^15.8.1",
@@ -19,7 +20,7 @@
     "react-slick": "^0.29.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
-    "redux-thunk": "^2.4.2",
+    "redux-saga": "^1.2.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
